2006-06-06  Csaba Henk <csaba.henk@creo.hu>
	* Let user specify an alternative parser class/`-o' handler for Fuse. 

2006-06-06  Csaba Henk <csaba.henk@creo.hu>
	* Option parsing refactorization:
	   - Generic suboption parsing code separated into a dedicated classes
	   - Implement FUSE option parsing by subclassing the aforementioned
	     classes
	* Add support for querying any fs method in feature requester.
	* Replace `foo.has_key(bar)' with `bar in foo'.
	* Updated docs.
	* Restructured source tree / I.:
	   - README -> README.historic
	   - xmp.py -> example/xmp.py
	   - added example/hello.py (contributed by Andrew Straw)
	   - added example/_find_fuse_parts.py (aux script)
	* Restructured source tree / II.:
	   - Created fuseparts package
	   - <generic opt parsing code> -> fuseparts/subbedoptparse.py
	   - _fusemeta.py -> fuseparts/__init__.py
	   - _fusemodule.c -> fuseparts/_fusemodule.c
	* Set True as the default value of the `fetch_mp' parser option.

2006-06-04  Csaba Henk <csaba.henk@creo.hu>
	* Added support for the rest of FUSE methods:
	  flush, fgetattr, ftruncate, access, getxattr, listxattr, setxattr,
	  removexattr.
	* Added interface for retrieving FUSE API version and requiring
	  features from the underlying library.
	* Sanitize xmp.py methods.

2006-06-01  Csaba Henk <csaba.henk@creo.hu>
	* Distillate Fuse instance -> <file> method proxying code into a
	  dedicated class.

2006-05-31  Csaba Henk <csaba.henk@creo.hu>
	* Update code so that it can use newer FUSE features:
	   - Stage 1: make file I/O stateful.
	     + If `open' methods returns an object, that will
	       be preserved and passed around to I/O requests
	       on the file in question.
	     + Added support for `create' method
	     + Wrap this mechanism into OO: file I/O methods
	       can be implemented via an user specified class.
	     + Add warning to README.new_fusepy_api.
	   - Stage 2: update directory related features